# chat-with-docs

./: .dockerignore  .env.sample  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml  server.py  streamlit_app.py
docCrawler/: constants.py  scrapy.cfg
docCrawler/middleware/: __init__.py  middlewares.py
docCrawler/spiders/: __init__.py  spider.py
docCrawler/utils/: __init__.py  helpers.py  items.py  logger.py  pipelines.py  script.py
scripts/: __init__.py  helpers.py  script.py
