[tool.poetry]
name = "chat-with-docs"
version = "0.1.0"
description = "LLM based tool to understand documentation"
authors = ["Khushiyant <khushiyant2002@gmail.com>", "Vidhu Mathur <mathur.vidhu2002@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
bs4 = "^0.0.2"
uvicorn = "^0.29.0"
sentence-transformers = "^2.7.0"
langchain = "^0.2.0"
streamlit = "^1.34.0"
duckduckgo-search = "^6.1.0"
twisted = "^24.3.0"
jq = "^1.7.0"
chromadb = "^0.5.0"
tiktoken = "^0.7.0"
langchain-community = "^0.2.0"
scrapy = "^2.11.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.4"
watchdog = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
